# Build-with-AI-GDG-Assiut-2025

./: LICENSE  README.md
Session 1 - Introduction to Google Antigravity/: portfolio-presentation.html
Session 1 - Introduction to Google Antigravity/Hands-on create a portfolio/: README.md
Session 2 The Hidden S in ATS/: README.md
Session 2 The Hidden S in ATS/The_Hidden_S_in_ATS/: .gitignore  AGENTS.md  Build With AI 2026.pptx  jr.txt  sr.txt
Session 2 The Hissen S in ATS/The_Hidden_S_in_ATS/: ats_evaluations.db  front-end.txt  prompts.txt  pyproject.toml
Session 2 The Hissen S in ATS/The_Hidden_S_in_ATS/.specify/extensions/: .registry
Session 2 The Hissen S in ATS/The_Hidden_S_in_ATS/.specify/integrations/: agy.manifest.json  speckit.manifest.json
Session 2 The Hissen S in ATS/The_Hidden_S_in_ATS/specs/001-gemini-ats-scorer/: data-model.md  plan.md  quickstart.md  research.md  tasks.md
Session 2 The Hissen S in ATS/The_Hidden_S_in_ATS/specs/001-gemini-ats-scorer/checklists/: requirements.md
Session 2 The Hissen S in ATS/The_Hidden_S_in_ATS/specs/002-ats-web-ui/: data-model.md  plan.md  research.md
Session 2 The Hissen S in ATS/The_Hidden_S_in_ATS/src/gemini_ats_scorer/: logger.py  models.py
Session 2 The Hissen S in ATS/The_Hidden_S_in_ATS/src/gemini_ats_scorer/lib/: evaluator.py  parser.py
Session 2 The Hissen S in ATS/The_Hidden_S_in_ATS/tests/integration/: test_cli.py
Session 2 The Hissen S in ATS/The_Hidden_S_in_ATS/tests/ui/: test_db.py
Session 2 The Hissen S in ATS/The_Hidden_S_in_ATS/tests/unit/: test_parser.py
(+35 files in other folders)
